# giff

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/: demo-help.tape  demo-light.tape  demo-rust.tape  demo-sidebyside.tape  demo-unified.tape  demo.tape
src/: args.rs  config.rs  diff.rs  display.rs  gitd.rs  lin.txt  main.rs  parser.rs  table.rs  ui.rs
src/ui/: event_loop.rs  mod.rs  rebase.rs  render.rs  syntax.rs  tests.rs  theme.rs  types.rs
