[package]
name = "giff"
version = "0.2.1"
edition = "2021"
description = "Visualizes the differences between the current HEAD and a specified branch in a git repository using a formatted table output in your terminal. The differences are displayed with color-coded additions and deletions for better readability."
documentation = "https://github.com/bahdotsh/giff"
homepage = "https://github.com/bahdotsh/giff"
repository = "https://github.com/bahdotsh/giff"
keywords = ["git", "cmd", "diff"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
exclude = ["HomebrewFormula"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.27.0", features = ["all-widgets"] }
regex = "1.10.6"

[profile.release]
codegen-units = 1
lto = true
